@@ -123,6 +123,7 @@ I would like to thank:
 * Jetbrains Team for the great sources of IntelliJ Community Edition which help me to improve this plugin
 * Mark James author of the famfamfam web site who provides beautiful icons.
 * [Jean Baptiste Potonnier](https://github.com/JJeeb) for the suggestion to create this plugin
+* [piddubnyi](https://github.com/piddubnyi) for adding [*drop database* action](https://github.com/dboissier/mongo4idea/pull/95)
 * Neko team, my first beta testers ;)
 * All users of this plugin who sent me valuable suggestions.
 * My wife and my daughters who support me to have fun in software development and also remind me my husband/father duty ;).
