@@ -36,6 +36,7 @@ import org.apache.commons.lang.StringUtils;
 import org.codinjutsu.tools.mongo.model.MongoCollectionResult;
 import org.codinjutsu.tools.mongo.utils.GuiUtils;
 import org.codinjutsu.tools.mongo.view.action.AddMongoDocumentAction;
+import org.codinjutsu.tools.mongo.view.action.CopyResultAction;
 import org.codinjutsu.tools.mongo.view.action.EditMongoDocumentAction;
 import org.codinjutsu.tools.mongo.view.model.JsonTreeModel;
 import org.codinjutsu.tools.mongo.view.model.JsonTreeNode;
@@ -136,8 +137,8 @@ public class MongoResultPanel extends JPanel implements Disposable {
     void buildPopupMenu() {
         DefaultActionGroup actionPopupGroup = new DefaultActionGroup("MongoResultPopupGroup", true);
         if (ApplicationManager.getApplication() != null) {
-            actionPopupGroup.add(new AddMongoDocumentAction(this));
             actionPopupGroup.add(new EditMongoDocumentAction(this));
+            actionPopupGroup.add(new CopyResultAction(this));
         }
 
         PopupHandler.installPopupHandler(resultTableView, actionPopupGroup, "POPUP", ActionManager.getInstance());
@@ -183,6 +184,9 @@ public class MongoResultPanel extends JPanel implements Disposable {
 
 
     public boolean isSelectedNodeId() {
+        if (resultTableView == null) {
+            return false;
+        }
         TreeTableTree tree = resultTableView.getTree();
         JsonTreeNode treeNode = (JsonTreeNode) tree.getLastSelectedPathComponent();
         if (treeNode == null) {
