@@ -19,8 +19,10 @@ package org.codinjutsu.tools.mongo.view.model;
 import com.mongodb.BasicDBList;
 import com.mongodb.BasicDBObject;
 import com.mongodb.DBObject;
+import org.apache.commons.lang.StringUtils;
 import org.codinjutsu.tools.mongo.model.MongoCollectionResult;
 import org.codinjutsu.tools.mongo.view.nodedescriptor.MongoKeyValueDescriptor;
+import org.codinjutsu.tools.mongo.view.nodedescriptor.MongoNodeDescriptor;
 import org.codinjutsu.tools.mongo.view.nodedescriptor.MongoResultDescriptor;
 import org.codinjutsu.tools.mongo.view.nodedescriptor.MongoValueDescriptor;
 
@@ -45,7 +47,7 @@ public class JsonTreeModel extends DefaultTreeModel {
         for (DBObject mongoObject : mongoObjects) {
             if (mongoObject instanceof BasicDBList) {
                 processDbObject(rootNode, mongoObject);
-            } else if (mongoObject instanceof BasicDBObject) {
+            } else if (mongoObject instanceof BasicDBObject) {//dead code?
                 JsonTreeNode currentNode = new JsonTreeNode(MongoValueDescriptor.createDescriptor(i++, mongoObject));
                 processDbObject(currentNode, mongoObject);
                 rootNode.add(currentNode);
@@ -123,5 +125,37 @@ public class JsonTreeModel extends DefaultTreeModel {
             }
         }
         return basicDBList;
+    }
+
+    public static JsonTreeNode findObjectIdNode(JsonTreeNode treeNode) {
+        MongoNodeDescriptor descriptor = treeNode.getDescriptor();
+        if (descriptor instanceof MongoResultDescriptor) { //defensive prog?
+            return null;
+        }
+
+        if (descriptor instanceof MongoKeyValueDescriptor) {
+            MongoKeyValueDescriptor keyValueDescriptor = (MongoKeyValueDescriptor) descriptor;
+            if (StringUtils.equals(keyValueDescriptor.getKey(), "_id")) {
+                return treeNode;
+            }
+        }
+
+        JsonTreeNode parentTreeNode = (JsonTreeNode) treeNode.getParent();
+        if (parentTreeNode.getDescriptor() instanceof MongoValueDescriptor) {
+            if (((JsonTreeNode) parentTreeNode.getParent()).getDescriptor() instanceof MongoResultDescriptor) {
+                //find
+            }
+        }
+
+        return null;
+    }
+
+    public static Object findDocument(JsonTreeNode startingNode) {
+        if (startingNode.getDescriptor() instanceof MongoValueDescriptor) {
+            if (((JsonTreeNode) startingNode.getParent()).getDescriptor() instanceof MongoResultDescriptor) {
+                return startingNode.getDescriptor().getValue();
+            }
+        }
+        return null;
     }
 }
